--- a/jsonbuilder/css/style.css
+++ b/jsonbuilder/css/style.css
@@ -1,15 +1,7 @@
 /*@import url(https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic);*/
 /*@import url(https://fonts.googleapis.com/css?family=Inconsolata:400);*/
-@font-face{font-family:'console';font-weight:400;src:url("../fonts/Consolas.ttf") format("truetype")}
-html{position:relative}
-body{padding-bottom:30px}
-html,body{min-height:100%}
-*{margin:0;padding:0;border:0;box-sizing:border-box;moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;-khtml-box-sizing:border-box;list-style:none;text-decoration:none;font-family:'console','Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;font-weight:400;outline:none}
-.logo{background:url('../images/logo_shadow.png');width:50px;height:45px;display:inline-block;vertical-align:middle;background-size:40px;background-repeat:no-repeat;background-position:center}
-.top-header{padding:10px 6px;background-color:#EEEEEE;border:1px solid #ddd;border-top:0;border-radius:0 0 2px 2px}
-.lgsl{position:absolute;left:50%;top:3px;width:250px;text-align:center;margin-left:-125px}
-.show{display:block!important}
-.hide{display:none}
+@import "common.css";
+
 #jsonEditor{position:relative;margin:15px 0 8px 0;padding:15px;border:1px solid #ddd;background:#eee;border-radius:2px}
 keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-webkit-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
@@ -17,9 +9,6 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-ms-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-o-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-khtml-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
-
-.container.top-header{margin-bottom:16px}
-.container{width:600px;margin:0 auto}
 
 .json_init{font-size:11px;padding:2px;cursor:pointer;position:relative;display:inline-block;border:1px solid #B6B6B6;background-image:linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-webkit-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-moz-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-o-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-ms-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-khtml-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);border-radius:2px;background-size:100% 20px;color:#000;text-shadow:0px 1px 0px #fff;text-align:center;width:35px;vertical-align:top;transition:all 1s ease;-webkit-transition:all 1s ease;-moz-transition:all 1s ease;-o-transition:all 1s ease;-ms-transition:all 1s ease;animation:process 1s infinite linear}
 .json_init:focus:before{content:"";border:1px solid #4D90FE;position:absolute;left:-1px;top:-1px;width:33px;height:17px;border-radius:2px}
@@ -37,8 +26,6 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 .json_op>.op:last-child{border-right:0}
 .json_op>.op:hover,.json_op>.op:focus{background-color:#E8E8E8}
 .json_op>.op:hover{color:#000}
-
-._block{padding:15px;margin:8px 0 15px 0;border:1px solid #ddd;background:#eee;border-radius:2px}
 
 .json_editor{overflow:auto;max-height:600px;padding-left:8px}
 .json_editor:hover .add_obj,.json_editor:hover .remove{opacity:0.4}
@@ -107,14 +94,6 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 .remove:hover{color:#b22;}
 .remove:before {content: "\f057";font-family: fontAwesome;font-size: 12px;display: inline-block;vertical-align: top;}
 
-.auth_info{color:#4F4F4F;font-size:12px}
-.auth_info:after,.auth_info:before{content:"";display:table;clear:both}
-
-.aname{color:black}
-.tl{font-size:14px}
-.main-title{position:relative}
-.em{float:right}
-
 .line{position:absolute;width:0px;left:-8px;top:0;height:100%;border-left:1px dotted #000}
 .line:before{content:"";left:-1px;top:0;position:absolute;width:6px;height:10px;border-bottom:1px dotted #000;background-color:#EEEEEE}
 .line:after{content:"";left:-1px;bottom:0;position:absolute;width:6px;height:8px;border-top:1px dotted #000;background-color:#EEEEEE}
@@ -165,6 +144,3 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 .ops.clone_obj:before {content: "\f24d";font-family: fontAwesome}
 .ops:hover{color:#474747}
 /* advance option */
-
-.foot{position:absolute;bottom:0;width:100%}
-.footer{padding:6px;background:#EEE;border:1px solid#ddd;border-radius:2px 2px 0 0}
