--- a/jsonbuilder/css/style.css
+++ b/jsonbuilder/css/style.css
@@ -10,6 +10,8 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-o-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-khtml-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 
+h1{font-size:1.5em}
+
 .json_init{font-size:11px;padding:2px;cursor:pointer;position:relative;display:inline-block;border:1px solid #B6B6B6;background-image:linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-webkit-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-moz-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-o-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-ms-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-khtml-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);border-radius:2px;background-size:100% 20px;color:#000;text-shadow:0px 1px 0px #fff;text-align:center;width:35px;vertical-align:top;transition:all 1s ease;-webkit-transition:all 1s ease;-moz-transition:all 1s ease;-o-transition:all 1s ease;-ms-transition:all 1s ease;animation:process 1s infinite linear}
 .json_init:focus:before{content:"";border:1px solid #4D90FE;position:absolute;left:-1px;top:-1px;width:33px;height:17px;border-radius:2px}
 
@@ -137,12 +139,35 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 .key .path {margin-left: 24px;}
 
 /* advance option */
-.option_tray {display: none;position: absolute;left: 0;bottom: calc(100% + 1px);z-index: 1;background: #D0D0D0;border: 1px solid #B9B9B9;border-radius: 2px;color: #7B7B7B;padding: 2px 4px;text-shadow: 0px 1px 0px #fff;white-space: nowrap;height: 20px;}
-.op_item>.ops {vertical-align: top}
-.op_item{font-size: 12px;text-align: center;vertical-align: top;padding: 0 2px;display: inline-block}
+.option_tray {display: none;position: absolute;left: 0;bottom: calc(100% + 1px);z-index: 3;background: #D0D0D0;border: 1px solid #B9B9B9;border-radius: 2px;color: #7B7B7B;padding: 0;text-shadow: 0px 1px 0px #fff;white-space: nowrap;}
+.op_item>.ops {line-height: normal;}
+.op_item{font-size: 12px;text-align: center;vertical-align: top;padding: 0 4px;display: inline-block;line-height: 20px;height: 20px;border-right: 1px solid #E6E6E6;border-left: 1px solid #B5B5B5;border-width: 0px 1px;}
+.op_item:last-child{border-right:0}
+.op_item:first-child{border-left:0}
+.op_item:hover{color:#000}
 
 .ops.remove_obj:before{content: "\f057";font-family: fontAwesome;}
 .ops.reset_obj:before{content: "\f01e";font-family: fontAwesome;}
-.ops.clone_obj:before {content: "\f24d";font-family: fontAwesome}
-.ops:hover{color:#474747}
+.ops.clone_obj:before {content: "\f24d";font-family: fontAwesome;}
 /* advance option */
+
+.inp {height: 25px;width: 300px;border: 1px solid #ddd;vertical-align: top;padding: 2px 6px}
+.inp:focus {border: 1px solid #881391;box-shadow: 0 0 8px rgba(136, 19, 145, 0.53)}
+.inp.err {border-color: #b22;box-shadow: 0 0 8px rgba(187, 34, 34, 0.51)}
+textarea.inp {height: 100px}
+
+.myform>.row>label {vertical-align: top;width: 100px;display: inline-block;text-align: right;margin-right: 10px;min-height: 1px}
+.myform>.row {margin-bottom: 6px;position: relative}
+.myform {text-align: center}
+.myform>.row:last-child {margin-bottom: 0}
+
+.sendmsg {background-color: #fff;height: 30px;width: 100px;border: 1px solid #ddd}
+.sendmsg:focus {border: 2px solid #881391}
+
+.mypk{background-image: url(../images/me.jpg);background-size: 100%;width: 40px;height: 40px;display: inline-block;vertical-align: middle;border-radius: 50%;border: 2px solid #000;margin-right: 4px;}
+.contactus{margin-top:50px}
+
+.linkedin {font-size: 11px;float: right;margin-top: 12px;color: #000}
+.linkedin:before {content: "\f0e1";font-family: FontAwesome;margin-right: 5px;display: inline-block;width: 15px;height: 15px;text-align: center;line-height: 15px;border-radius: 2px;background-color: #881391;color: #fff}
+
+.errm {border: 1px solid #b22;display: inline-block;width: 375px;font-size: 14px;padding: 4px;background-color: rgba(187, 34, 34, 0.54);color: #fff;border-radius: 2px;text-shadow: 0 1px 0px #b22}
