--- a/jsonbuilder/css/common.css
+++ b/jsonbuilder/css/common.css
@@ -2,12 +2,12 @@
 html{position:relative}
 body{padding-bottom:30px}
 html,body{min-height:100%}
-*{margin:0;padding:0;border:0;box-sizing:border-box;moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;-khtml-box-sizing:border-box;list-style:none;text-decoration:none;font-family:'console','Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;font-weight:400;outline:none}
+*{margin:0;padding:0;border:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;-khtml-box-sizing:border-box;list-style:none;text-decoration:none;font-family:'console','Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;font-weight:400;outline:none}
 .container.top-header{margin-bottom:16px}
 .container{width:600px;margin:0 auto}
 .logo{background:url('../images/logo_shadow.png');width:50px;height:45px;display:inline-block;vertical-align:middle;background-size:40px;background-repeat:no-repeat;background-position:center}
 .top-header{padding:10px 6px;background-color:#EEEEEE;border:1px solid #ddd;border-top:0;border-radius:0 0 2px 2px}
-.lgsl{position: absolute;left: 50%;top: 8px;width: 250px;text-align: center;margin-left: -125px;font-size: 25px}
+.lgsl{position: absolute;left: 50%;top: 8px;width: 250px;text-align: center;margin-left: -125px;font-size: 1em}
 .show{display:block!important}
 .hide{display:none}
 ._block{padding:15px;margin:8px 0 15px 0;border:1px solid #ddd;background:#eee;border-radius:2px}
