--- a/css/common.css
+++ b/css/common.css
@@ -19,7 +19,7 @@ html,body{min-height:100%}
 .main-title{position:relative}
 
 .menu > li>a {color: #000;padding: 3px 6px;background: #fff;float: left}
-.menu {font-size: 12px;float: right;margin-top: 34px;border: 1px solid #ddd;border-bottom: 0;border-radius: 5px 5px 0 0;overflow: hidden}
+.menu {font-size: 12px;float: right;margin-top: 34px;border: 1px solid #ddd;border-bottom: 0;border-radius: 5px 5px 0 0;overflow: hidden;display: none;}
 .menu>li {float: left;border-right: 1px solid #ddd}
 .menu > li.active>a {border-bottom: 1px solid #881391}
 .menu>li:last-child {border-right: 0}
