--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,13 @@ h1{font-size:1.5em}
 .json_editor{overflow:auto;max-height:600px;padding-left:8px}
 .json_editor:hover .add_obj,.json_editor:hover .remove{opacity:0.4}
 
-.json_block.iobj:before{content:"{";vertical-align: top;}
-.json_block.iobj:after{content:"}";vertical-align: top;}
-.json_block.iarr:before{content:"[";vertical-align: top;}
-.json_block.iarr:after{content:"]";vertical-align: top;}
+.json_block.iobj:before{content:"{";vertical-align: top;font-size:16px}
+.json_block.iobj:after{content:"}";vertical-align: top;font-size:16px}
+.json_block.iarr:before{content:"[";vertical-align: top;font-size:16px}
+.json_block.iarr:after{content:"]";vertical-align: top;font-size:16px}
 .json_block >.key_holder > .key_row:last-child > .val:after{display:none}
-.json_block >.key_holder > .key_row:last-child > .obj > .iobj:after{content:"}"}
-.json_block >.key_holder > .key_row:last-child > .obj > .iarr:after{content:"]"}
+.json_block >.key_holder > .key_row:last-child > .obj > .iobj:after{content:"}";font-size:16px}
+.json_block >.key_holder > .key_row:last-child > .obj > .iarr:after{content:"]";font-size:16px}
 .json_block{position:relative}
 .json_block.iobj > .path,.json_block.iarr > .path{left:0;top:0;margin-left: 24px;}
 .json_block.row_collapse > .collapse {background: #881391}
@@ -67,13 +67,13 @@ h1{font-size:1.5em}
 
 .val:after{content:","}
 .val.obj:after{content:""}
-.val.obj >.iobj:after{content:"},";letter-spacing:-2px}
-.val.obj >.iarr:after{content:"],";letter-spacing:-2px}
+.val.obj >.iobj:after{content:"},";letter-spacing:-2px;font-size:16px}
+.val.obj >.iarr:after{content:"],";letter-spacing:-2px;font-size:16px}
 .val.nonobj > .json_block{display:inline}
 
 .objtxt{border:1px solid #ddd;min-width:10px;border-radius:2px;vertical-align:middle;padding:0 2px;font-size:12px;background:#fff;color:#881391;line-height:18px;height:20px;vertical-align:top;/*text-shadow:0 0 0px #000;*/}
 .objtxt[contenteditable]{display:inline-block;position:relative;z-index:1}
-.objtxt:active,.objtxt:focus{background:#fff;border:1px solid #4D90FE}
+.objtxt:active,.objtxt:focus{background:#fff;border:1px solid #4D90FE!important}
 .objtxt:empty:before{content:"Key";color:#B3B3B3}
 .objtxt.invalid{border:1px solid #b22;box-shadow: 0 0 5px rgba(187, 34, 34, 0.5)}
 .objtxt.invalid:before{content:"\f071";font-family: FontAwesome;position: absolute;right: 100%;top: 0;margin-right: 5px;color: #DAA520;text-shadow: 1px 1px 1px #fff}
@@ -115,9 +115,9 @@ h1{font-size:1.5em}
 .info{color:#2A2A2A;font-size:15px}
 .info .ref{font-size:11px;font-style:italic}
 
-.result{width:100%;padding:8px;border:1px solid #ddd;border-radius:2px;margin-top:8px;resize:none;overflow-x: auto;overflow-y: hidden;white-space: pre}
+.result{width:100%;padding:8px;border:1px solid #ddd;border-radius:2px;margin-top:8px;resize:none;overflow-x: auto;overflow-y: hidden;white-space: pre;font-size:14px}
 
-.new-json {position: absolute;top: 0;right: 0;margin: 8px;z-index: 2;}
+.new-json {position: absolute;top: 0;right: 0;margin: 8px;z-index: 3;}
 .new-json:before {content: "\f005";font-family: FontAwesome;margin-right: 4px;color:#DAA520;}
 
 .cmd-wrap {display: inline-block;vertical-align: top;}
@@ -136,23 +136,27 @@ h1{font-size:1.5em}
 .t-point:last-child {margin-bottom: 0;}
 
 .cmd-btn{text-align:center}
-.expand, .collapse{display: none;width: 8px;height: 8px;background: #881391;vertical-align: middle;border-radius: 50%;border: 1px solid #fff;box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);cursor: pointer;}
-.collapse{display: inline-block;background: #979797;}
-.collapse:hover {background-color: #881391;}
+.expand, .collapse{display: none;width: 8px;height: 8px;background: #881391;vertical-align: middle;border-radius: 50%;border: 1px solid #fff;box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);cursor: pointer}
+.collapse{display: inline-block;background: #979797}
+.collapse:hover {background-color: #881391}
 
-.key .path {margin-left: 24px;}
+.key .path {margin-left:24px}
+.key:hover >.option_tray{visibility:visible}
+.key:hover >.option_tray>ul{left:0}
 
 /* advance option */
-.option_tray {display: none;position: absolute;left: 0;bottom: calc(100% + 1px);z-index: 3;background: #D0D0D0;border: 1px solid #B9B9B9;border-radius: 2px;color: #7B7B7B;padding: 0;text-shadow: 0px 1px 0px #fff;white-space: nowrap;}
-.op_item>.ops {line-height: normal;}
-.op_item{font-size: 12px;text-align: center;vertical-align: top;padding: 0 4px;display: inline-block;line-height: 20px;height: 20px;border-right: 1px solid #E6E6E6;border-left: 1px solid #B5B5B5;border-width: 0px 1px;}
+.option_tray {visibility: hidden;position: absolute;left: 1px;bottom: calc(100% + 0px);z-index: 3;overflow: hidden}
+.option_tray > ul {background: #881391;border: 1px solid #580b5e;border-radius: 2px;height: 20px;white-space: nowrap;text-shadow: 0px 1px 0px #5c0d62;padding: 0;color: #fff;position: relative;left: calc(-100%);transition: all .5s ease;-webkit-transition: all .5s ease;-moz-transition: all .5s ease;-ms-transition: all .5s ease;-o-transition: all .5s ease}
+
+.op_item>.ops {line-height: normal}
+.op_item{font-size: 12px;text-align: center;vertical-align: top;padding: 0 4px;display: inline-block;line-height: 18px;height: 18px;border-right: 1px solid #a018ab;border-left: 1px solid #680d6f;border-width: 0px 1px;}
 .op_item:last-child{border-right:0}
 .op_item:first-child{border-left:0}
 .op_item:hover{color:#000}
 
-.ops.remove_obj:before{content: "\f057";font-family: fontAwesome;}
-.ops.reset_obj:before{content: "\f01e";font-family: fontAwesome;}
-.ops.clone_obj:before {content: "\f24d";font-family: fontAwesome;}
+.ops.remove_obj:before{content: "\f057";font-family: fontAwesome}
+.ops.reset_obj:before{content: "\f01e";font-family: fontAwesome}
+.ops.clone_obj:before{content: "\f24d";font-family: fontAwesome}
 /* advance option */
 
 .inp {height: 25px;width: 300px;border: 1px solid #ddd;vertical-align: top;padding: 2px 6px}
